v0.7 - 21st August 2010
* new attribute Shipment#consols
* new method Shipment#transport_mode
* new method Shipment#full_orders
* new attribute Order#invoice_number

v0.6 - 31st August 2010
* new methods Order#to_xml and Shipment#to_xml
* new attribute Shipment#invoices

v0.5 - 27th August 2010

* initial release