@@ -19,6 +19,21 @@ module Cargowise
       OrdersClient.get_order_list(ep.code, ep.user, ep.password, filter_hash)
     end
 
+    # find all orders with a ShipmentNumber that matches ref
+    #
+    def by_shipment_number(ref)
+      filter_hash = {
+        "tns:Filter" => {
+          "tns:Number" => {
+            "tns:NumberSearchField" => "ShipmentNumber",
+            "tns:NumberValue" => ref
+          }
+        }
+      }
+      OrdersClient.endpoint(endpoint_hash) # probably not threadsafe. oops.
+      OrdersClient.get_order_list(ep.code, ep.user, ep.password, filter_hash)
+    end
+
     # find all orders still marked as incomplete.
     #
     def incomplete
