@@ -3,6 +3,7 @@ v0.7 - 21st August 2010
 * new method Shipment#transport_mode
 * new method Shipment#full_orders
 * new attribute Order#invoice_number
+* new Order search method - Order.via(blah).by_shipment_number
 
 v0.6 - 31st August 2010
 * new methods Order#to_xml and Shipment#to_xml
